# llm_auto_memo

./: .gitignore  README.md  build_notes.sh  capture_screen.sh  com.examples.capturescreen.plist  com.examples.workingnotes.plist  common.py  create_explanation.py  create_report.py  image_to_text.py  main.py  move_archive_folder.py  move_images.py  process.py  pyproject.toml  rect.py  remove_duplicate_files.py
scripts/local_llm/: README.md  local_llm.py  local_llm.xlsx  out.csv  pyproject.toml  requirements.txt
scripts/ocr_test/: easocr.py  main.py  output_big.csv  output_small.csv  pyproject.toml
scripts/send_prompt/: ocr.txt.example  pyproject.toml  send_prompt.py
templates/: ocr_explanation.txt.example  report_prompt.txt.example
